--- a/ActionCtr/app/src/main/AndroidManifest.xml
+++ b/ActionCtr/app/src/main/AndroidManifest.xml
@@ -11,9 +11,10 @@
         <activity android:name=".BeginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".ParamChangeActivity">
         </activity>
     </application>
 
