--- a/ActionCtr/app/src/main/AndroidManifest.xml
+++ b/ActionCtr/app/src/main/AndroidManifest.xml
@@ -4,12 +4,18 @@
     <uses-permission android:name="android.permission.BLUETOOTH"/>   <!--设置蓝牙权限-->
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/> <!--设置蓝牙权限-->
     <uses-feature android:name="android.hardware.bluetooth_le" android:required="true"/>
+
+    <uses-permission android:name="android.permission.INTERNET"/>   <!--设置网络权限-->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/> <!--设置网络权限-->
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/> <!--设置网络权限-->
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+
         <activity
             android:name=".BeginActivity"
             android:screenOrientation="landscape">
