--- a/ActionCtr/app/src/main/AndroidManifest.xml
+++ b/ActionCtr/app/src/main/AndroidManifest.xml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.action.app.actionctr">
-
     <uses-permission android:name="android.permission.BLUETOOTH" /> <!-- 设置蓝牙权限 -->
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" /> <!-- 设置蓝牙权限 -->
     <uses-feature
         android:name="android.hardware.bluetooth_le"
         android:required="true" />
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -19,21 +17,25 @@
             android:screenOrientation="landscape">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name=".BeginActivity"
-            android:screenOrientation="landscape"></activity>
+            android:screenOrientation="landscape" />
         <activity
             android:name=".ParamChangeActivity"
-            android:screenOrientation="landscape"></activity>
+            android:screenOrientation="landscape" />
+        <activity
+            android:name=".DataActivity"
+            android:screenOrientation="landscape">
+        </activity>
 
         <service
             android:name=".ble.BleService"
             android:enabled="true"
-            android:exported="true"></service>
+            android:exported="true" />
+
     </application>
 
 </manifest>
