添加jxl.jar，用于excel读写

--- a/ActionCtr/app/build.gradle
+++ b/ActionCtr/app/build.gradle
@@ -39,4 +39,6 @@ dependencies {
     compile 'com.google.android.gms:play-services-appindexing:8.4.0'
     compile 'com.facebook.stetho:stetho:1.4.1'
     compile 'com.facebook.stetho:stetho-okhttp3:1.4.1'
+
+    compile files('libs/jxl-2.6.jar')
 }
