--- a/ActionCtr/app/src/main/AndroidManifest.xml
+++ b/ActionCtr/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
 
     <uses-permission android:name="android.permission.BLUETOOTH" /> <!-- 设置蓝牙权限 -->
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" /> <!-- 设置蓝牙权限 -->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>
     <uses-feature
         android:name="android.hardware.bluetooth_le"
         android:required="true" />
