--- a/ActionCtr/app/src/main/AndroidManifest.xml
+++ b/ActionCtr/app/src/main/AndroidManifest.xml
@@ -1,21 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.action.app.actionctr">
+
     <uses-permission android:name="android.permission.BLUETOOTH" /> <!-- 设置蓝牙权限 -->
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" /> <!-- 设置蓝牙权限 -->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
+
     <uses-feature
         android:name="android.hardware.bluetooth_le"
         android:required="true" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        android:theme="@style/AppTheme">
         <activity
             android:name=".BeginActivity"
+            android:screenOrientation="landscape"></activity>
+        <activity
+            android:name=".BleConnectActivity"
             android:screenOrientation="landscape">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,20 +29,20 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".BleConnectActivity"
-            android:screenOrientation="landscape" />
-        <activity
+            android:windowSoftInputMode="adjustUnspecified|stateHidden"
             android:name=".ParamChangeActivity"
             android:screenOrientation="landscape" />
         <activity
             android:name=".DataActivity"
-            android:screenOrientation="landscape">
-        </activity>
+            android:screenOrientation="landscape"></activity>
+        <activity android:name=".CtrActivity"></activity>
 
         <service
             android:name=".ble.BleService"
             android:enabled="true"
             android:exported="true" />
+
+
     </application>
 
 </manifest>
