--- a/ActionCtr/app/src/main/AndroidManifest.xml
+++ b/ActionCtr/app/src/main/AndroidManifest.xml
@@ -7,9 +7,21 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
 
+    <!--下面是wifi的权限设置-->
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_MULTICAST_STATE" />
+    <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+
+    <!--下面声明使用ble-->
     <uses-feature
         android:name="android.hardware.bluetooth_le"
         android:required="true" />
+    <!--下面声明使用wifi-->
+    <uses-feature android:name="android.hardware.wifi" />
 
     <application
         android:allowBackup="true"
@@ -19,14 +31,15 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".BeginActivity"
-            android:screenOrientation="landscape"></activity>
-        <activity
-            android:name=".BleConnectActivity"
             android:screenOrientation="landscape">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".BleConnectActivity"
+            android:screenOrientation="landscape">
         </activity>
         <activity
             android:windowSoftInputMode="adjustUnspecified|stateHidden"
@@ -41,8 +54,10 @@
             android:name=".ble.BleService"
             android:enabled="true"
             android:exported="true" />
-
-
+        <service
+            android:name=".wifi.wifiService"
+            android:enabled="true"
+            android:exported="true"/>
     </application>
 
 </manifest>
