--- a/ActionCtr/app/src/main/AndroidManifest.xml
+++ b/ActionCtr/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
 
-    <!--下面是wifi的权限设置-->
+    <!-- 下面是wifi的权限设置 -->
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
     <uses-permission android:name="android.permission.CHANGE_WIFI_MULTICAST_STATE" />
@@ -16,11 +16,11 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 
-    <!--下面声明使用ble-->
+    <!-- 下面声明使用ble -->
     <uses-feature
         android:name="android.hardware.bluetooth_le"
         android:required="true" />
-    <!--下面声明使用wifi-->
+    <!-- 下面声明使用wifi -->
     <uses-feature android:name="android.hardware.wifi" />
 
     <application
@@ -34,21 +34,23 @@
             android:screenOrientation="landscape">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name=".BleConnectActivity"
-            android:screenOrientation="landscape">
-        </activity>
+            android:screenOrientation="landscape"></activity>
         <activity
-            android:windowSoftInputMode="adjustUnspecified|stateHidden"
             android:name=".ParamChangeActivity"
-            android:screenOrientation="landscape" />
+            android:screenOrientation="landscape"
+            android:windowSoftInputMode="adjustUnspecified|stateHidden" />
         <activity
             android:name=".DataActivity"
-            android:screenOrientation="landscape"></activity>
-        <activity android:name=".CtrActivity"></activity>
+            android:screenOrientation="landscape" />
+        <activity android:name=".CtrActivity" />
+        <activity android:name=".DebugDataDisplayActivity"
+            android:screenOrientation="landscape" />
 
         <service
             android:name=".ble.BleService"
@@ -57,7 +59,9 @@
         <service
             android:name=".wifi.wifiService"
             android:enabled="true"
-            android:exported="true"/>
+            android:exported="true" />
+
+
     </application>
 
 </manifest>
