--- a/ActionCtr/app/src/main/AndroidManifest.xml
+++ b/ActionCtr/app/src/main/AndroidManifest.xml
@@ -32,14 +32,15 @@
         <activity
             android:name=".BeginActivity"
             android:screenOrientation="landscape">
+        </activity>
+        <activity
+            android:name=".BleConnectActivity"
+            android:screenOrientation="landscape">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".BleConnectActivity"
-            android:screenOrientation="landscape"></activity>
         <activity
             android:name=".ParamChangeActivity"
             android:screenOrientation="landscape"
