修复了wifi ble不稳定还有一些相关的bug ，增加了删除之前保存参数的功能

--- a/ActionCtr/app/src/main/AndroidManifest.xml
+++ b/ActionCtr/app/src/main/AndroidManifest.xml
@@ -39,7 +39,8 @@
         </activity>
         <activity
             android:name=".BeginActivity"
-            android:screenOrientation="landscape"></activity>
+            android:screenOrientation="landscape">
+        </activity>
         <activity android:name=".humanSensorActivity"
                   android:screenOrientation="landscape">
         </activity>
