安装两个app方法： 1.修改build.gradle 中的applicationId 2,修改Manifest中的对应package 3, refactor 文件

--- a/ActionCtr/app/build.gradle
+++ b/ActionCtr/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 25
     buildToolsVersion '25.0.0'
     defaultConfig {
-        applicationId "com.action.app.actionctr"
+        applicationId "com.action.app.actionctr2"//"com.action.app.actionctr2"
         minSdkVersion 21
         targetSdkVersion 25
         versionCode 1
