--- a/ActionCtr/app/src/main/AndroidManifest.xml
+++ b/ActionCtr/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.action.app.actionctr">
+    package="com.action.app.actionctr2">
 
     <uses-permission android:name="android.permission.BLUETOOTH" /> <!-- 设置蓝牙权限 -->
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" /> <!-- 设置蓝牙权限 -->
@@ -24,7 +24,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/robocon"
+        android:icon="@drawable/blue"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
