--- a/ActionCtr/app/src/main/AndroidManifest.xml
+++ b/ActionCtr/app/src/main/AndroidManifest.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.action.app.actionctr2">
-<!--设置权限-->
+
     <uses-permission android:name="android.permission.BLUETOOTH" /> <!-- 设置蓝牙权限 -->
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" /> <!-- 设置蓝牙权限 -->
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" /> <!-- 设置sd的权限-->
-    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" /> <!-- 设置sd的权限-->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
 
     <!-- 下面是wifi的权限设置 -->
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
@@ -22,11 +22,9 @@
     <!-- 下面声明使用wifi -->
     <uses-feature android:name="android.hardware.wifi" />
 
-    <!--supportsRtl  支持从右到左布局
-    landscape设置横屏-->
     <application
         android:allowBackup="true"
-        android:icon="@drawable/blue"
+        android:icon="@drawable/robocon"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -42,22 +40,17 @@
             android:name=".BeginActivity"
             android:screenOrientation="landscape">
         </activity>
-        <!--人形传感器-->
         <activity android:name=".humanSensorActivity"
                   android:screenOrientation="landscape">
         </activity>
-        <!--参数改变-->
         <activity
             android:name=".ParamChangeActivity"
             android:screenOrientation="landscape"
             android:windowSoftInputMode="adjustUnspecified|stateHidden" />
-        <!--参数数据-->
         <activity
             android:name=".DataActivity"
             android:screenOrientation="landscape" />
-        <!--这个activity现在已失效，不再使用-->
         <activity android:name=".CtrActivity" />
-        <!--调试数据-->
         <activity
             android:name=".DebugDataDisplayActivity"
             android:screenOrientation="landscape" />
