--- a/ActionCtr/app/src/main/AndroidManifest.xml
+++ b/ActionCtr/app/src/main/AndroidManifest.xml
@@ -16,9 +16,9 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <!-- 下面声明使用ble -->
-    <uses-feature
-        android:name="android.hardware.bluetooth_le"
-        android:required="true" />
+    <!--<uses-feature-->
+        <!--android:name="android.hardware.bluetooth_le"-->
+        <!--android:required="true" />-->
     <!-- 下面声明使用wifi -->
     <uses-feature android:name="android.hardware.wifi" />
 
