--- a/ActionCtr/app/src/main/AndroidManifest.xml
+++ b/ActionCtr/app/src/main/AndroidManifest.xml
@@ -28,13 +28,16 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity
-             android:name=".BleConnectActivity"
+        <activity android:name=".ModeSelect"
             android:screenOrientation="landscape">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+             android:name=".BleConnectActivity"
+            android:screenOrientation="landscape">
         </activity>
         <activity
             android:name=".BeginActivity"
