--- a/ActionCtr/app/src/main/AndroidManifest.xml
+++ b/ActionCtr/app/src/main/AndroidManifest.xml
@@ -15,10 +15,11 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <!-- 下面声明使用ble -->
-    <!--<uses-feature-->
-        <!--android:name="android.hardware.bluetooth_le"-->
-        <!--android:required="true" />-->
+    <uses-feature
+        android:name="android.hardware.bluetooth_le"
+        android:required="true" />
     <!-- 下面声明使用wifi -->
     <uses-feature android:name="android.hardware.wifi" />
 
